Commented the code and added initial unit tests

--- a/src/common/App.ipynb
+++ b/src/common/App.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "503f62b3",
+   "metadata": {},
+   "source": [
+    "## Import Dependencies"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "90f5b598",
@@ -8,8 +16,17 @@
    "outputs": [],
    "source": [
     "#import libraries\n",
+    "\n",
     "from pubnub.pnconfiguration import PNConfiguration\n",
     "from pubnub.pubnub import PubNub"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "29ec3a21",
+   "metadata": {},
+   "source": [
+    "## Initiate PubNub Configuartions Class"
    ]
   },
   {
@@ -21,6 +38,7 @@
    "source": [
     "class PubNub_Config:\n",
     "    \n",
+    "    \n",
     "    # Class Initialization\n",
     "    \n",
     "    def __init__(self, subscribe_key, publish_key, user_id):\n",
@@ -30,6 +48,9 @@
     "        self.pnconfig.user_id = user_id\n",
     "        self.pubnub = PubNub(self.pnconfig)\n",
     "        \n",
+    "        \n",
+    "    # Method to Start Twitter PubNub Streaming\n",
+    "    \n",
     "    def run(self, MySubscribeCallback):\n",
     "        self.pubnub.add_listener(MySubscribeCallback)\n",
     "        self.pubnub.subscribe().channels('pubnub-twitter').execute()\n",
