--- a/src/common/Cassandra_DB_Setup.ipynb
+++ b/src/common/Cassandra_DB_Setup.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "b69f619b",
+   "metadata": {},
+   "source": [
+    "## Import Dependencies"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "1675d227",
@@ -14,22 +22,47 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fa636095",
+   "metadata": {},
+   "source": [
+    "## Fucntion to Connect to Cassandra DB"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "0557aa2b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#connect to Cassandra Cluster\n",
+    "# Method to connect to Cassandra Cluster\n",
     "\n",
     "def cassandra_connection(path, cassandra_config):\n",
+    "    \n",
+    "    # Get Bundle from Zip file\n",
     "    cloud_config= {\n",
     "      'secure_connect_bundle': path\n",
     "    }\n",
+    "    \n",
+    "    # Get DB configurations from configuration.yaml\n",
+    "    \n",
     "    auth_provider = PlainTextAuthProvider(cassandra_config['ASTRA_CLIENT_ID'], cassandra_config['ASTRA_CLIENT_SECRET'])\n",
+    "    \n",
+    "    # Connct to Cassandra DB Cluster\n",
+    "    \n",
     "    cluster = Cluster(cloud=cloud_config, auth_provider=auth_provider)\n",
     "    session = cluster.connect()\n",
+    "    \n",
     "    return session"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "187b3a48",
+   "metadata": {},
+   "source": [
+    "## Function to Create Table in Cassandra DB"
    ]
   },
   {
@@ -39,9 +72,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#create table for storing Top Trends \n",
+    "# Method for table creation\n",
     "\n",
     "def create_table(session, keyspace, table_name, column_names, column_types, primary_key):\n",
+    "    \n",
+    "    \n",
+    "    # Prepare Query for Table Creation based on parameters\n",
+    "    \n",
     "    qry= 'CREATE TABLE IF NOT EXISTS ' + keyspace + '.' + table_name + '('\n",
     "    \n",
     "    for i in range(len(column_names)):\n",
@@ -59,8 +96,19 @@
     "         qry = qry[:-2] + ');'\n",
     "    \n",
     "    \n",
+    "    \n",
+    "    #Execute Table Creation Query\n",
+    "    \n",
     "    print(qry)\n",
     "    session.execute(qry)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2aeea45a",
+   "metadata": {},
+   "source": [
+    "## Function to Populate Cassandra DB Table from Pandas Dataframe"
    ]
   },
   {
@@ -70,11 +118,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Method to Insert Pandas df into Cassandra table\n",
+    "\n",
     "def insert_into_table_from_df(session, keyspace, table_name, column_names, df):\n",
+    "    \n",
+    "    \n",
+    "    # Prepare Query for insertion into table\n",
+    "    \n",
     "    qry= 'INSERT INTO ' + keyspace + '.' + table_name + ' ' + column_names + ' '  + 'VALUES (%s, %s)'\n",
+    "    \n",
+    "    \n",
+    "    # Read Each Row from Data Frame and Insert Into Table One by One\n",
+    "    \n",
     "    for key, value in df.items():\n",
     "        print(qry, key, value)\n",
     "        session.execute(qry, (key, value))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7035c0b1",
+   "metadata": {},
+   "source": [
+    "## Function to Select * from Table in Cassandra DB"
    ]
   },
   {
@@ -84,10 +150,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Method to selct * from Cassandra table\n",
+    "\n",
     "def select_from_table(session, keyspace, table_name):\n",
+    "    \n",
+    "    \n",
+    "    # Prepare Query for select\n",
+    "    \n",
     "    qry= 'SELECT * from '+ keyspace + '.' + table_name + ';'\n",
+    "    \n",
+    "    \n",
+    "    # Execute Query\n",
+    "    \n",
     "    print(qry)\n",
     "    result = session.execute(qry)\n",
+    "    \n",
+    "    \n",
+    "    # Print Each Row Reteived from the table\n",
     "    for x in result:\n",
     "        print(x[0], x[1])"
    ]
