--- a/src/common/Extract_Twitter_Trends.ipynb
+++ b/src/common/Extract_Twitter_Trends.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "4886fa38",
+   "metadata": {},
+   "source": [
+    "## Import Dependencies"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "b3267452",
@@ -19,6 +27,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "141e009a",
+   "metadata": {},
+   "source": [
+    "## Initiate Class for Extraction of Top Trends"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "7b45d459",
@@ -28,6 +44,7 @@
     "#Trends Class\n",
     "\n",
     "class Twitter_Trends:\n",
+    "    \n",
     "    \n",
     "    # Class Initialization\n",
     "    \n",
@@ -43,38 +60,53 @@
     "\n",
     "    def get_top_trends(self):\n",
     "\n",
+    "        \n",
     "        # Configure Webdriver\n",
+    "        \n",
     "        options = Options()\n",
     "        options.add_argument('--headless')\n",
+    "        \n",
     "\n",
     "        # Obtain the version of ChromeDriver compatible with the browser being used\n",
+    "        \n",
     "        driver = webdriver.Chrome(service=Service(ChromeDriverManager().install()), options=options)\n",
     "    \n",
+    "    \n",
     "        # Generate URL for Scraping based on Configuartions  \n",
+    "        \n",
     "        url = \"https://getdaytrends.com/\" + self.country + \"/\" + str(self.date) + \"/\" + str(self.hour) + \"/\" \n",
     "        print(url)\n",
     "\n",
+    "        \n",
     "        # Web Scrape getdaytrends to bring the Twitter Trends\n",
+    "        \n",
     "        driver.get(url)\n",
     "\n",
+    "        \n",
     "        # Retreive Trends table\n",
+    "        \n",
     "        content = driver.page_source\n",
-    "\n",
+    "        \n",
+    "        \n",
     "        # parse the HTML content obtained to get Top Trends\n",
-    "        soup = BeautifulSoup(content)\n",
+    "        \n",
+    "        soup = BeautifulSoup(content, \"html.parser\")\n",
     "        mytds = soup.findAll(\"title\")\n",
     "\n",
+    "        \n",
     "        # Cap Top if it is greater than number of trends received from website\n",
+    "        \n",
     "        top = self.top+1\n",
     "        if top > len(mytds):\n",
     "            top = len(mytds)\n",
     "            self.top = len(mytds) - 1\n",
-    "\n",
+    "        \n",
+    "        \n",
+    "        # Retrieve Top Trends \n",
+    "        \n",
     "        for i in range(top): \n",
     "            if i > 0:\n",
-    "\n",
     "                text = str(mytds[i])\n",
-    "                # initializing substrings\n",
     "                result = re.search('title>(.*):', text)\n",
     "                self.top_trends[i] = result.group(1).replace('#', '').lower()\n",
     "\n",
