--- a/src/common/My_Subscribe_Callback.ipynb
+++ b/src/common/My_Subscribe_Callback.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "2306e2fa",
+   "metadata": {},
+   "source": [
+    "## Import Dependencies"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "b2e26b49",
@@ -16,6 +24,14 @@
     "\n",
     "#import ipynb files\n",
     "import common.Cassandra_DB_Setup as Cassandra_DB_Setup"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c948183c",
+   "metadata": {},
+   "source": [
+    "## Initialize Global Variables"
    ]
   },
   {
@@ -44,6 +60,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3ca85974",
+   "metadata": {},
+   "source": [
+    "## Function to Publish Callback"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "61f67012",
@@ -51,13 +75,26 @@
    "outputs": [],
    "source": [
     "def my_publish_callback(envelope, status):\n",
+    "    \n",
     "    # Check whether request successfully completed or not\n",
+    "    \n",
     "    if not status.is_error():\n",
+    "        \n",
     "        pass  # Message successfully published to specified channel.\n",
+    "    \n",
     "    else:\n",
+    "        \n",
     "        pass  # Handle message publish error. Check 'category' property to find out possible issue\n",
     "        # because of which request did fail.\n",
     "        # Request can be resent using: [status retry];"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "765f732a",
+   "metadata": {},
+   "source": [
+    "## Initialize Class for Subscibing Callback for Retreiving Start Time"
    ]
   },
   {
@@ -70,39 +107,68 @@
     "class FirstSubscribeCallback(SubscribeCallback):\n",
     "    \n",
     "    def presence(self, pubnub, presence):\n",
+    "        \n",
     "        pass  # handle incoming presence data\n",
     "    \n",
     "\n",
     "    def status(self, pubnub, status):\n",
+    "        \n",
     "        if status.category == PNStatusCategory.PNUnexpectedDisconnectCategory:\n",
+    "            \n",
     "            pass  # This event happens when radio / connectivity is lost\n",
     "\n",
     "        elif status.category == PNStatusCategory.PNConnectedCategory:\n",
+    "            \n",
     "            # Connect event. You can do stuff like publish, and know you'll get it.\n",
     "            # Or just use the connected event to confirm you are subscribed for\n",
     "            # UI / internal notifications, etc\n",
+    "            \n",
     "            pubnub.publish().channel('pubnub-twitter').message(\"Hello\").pn_async(my_publish_callback)\n",
     "\n",
     "        elif status.category == PNStatusCategory.PNReconnectedCategory:\n",
+    "            \n",
     "            pass\n",
+    "        \n",
     "            # Happens as part of our regular operation. This event happens when\n",
     "            # radio / connectivity is lost, then regained.\n",
+    "            \n",
     "        elif status.category == PNStatusCategory.PNDecryptionErrorCategory:\n",
+    "            \n",
     "            pass\n",
+    "        \n",
     "            # Handle message decryption error. Probably client configured to\n",
     "            # encrypt messages and on live data feed it received plain text.\n",
     "    \n",
     "    def message(self, pubnub, message):\n",
+    "        \n",
     "        # Handle new message stored in message.message\n",
+    "        \n",
+    "        \n",
+    "        # Get Start Time\n",
+    "        \n",
     "        creation_time = datetime.strptime(message.message['created_at'], \"%a %b %d %H:%M:%S %z %Y\")\n",
+    "        \n",
     "\n",
+    "        # Declare Global Variables\n",
+    "        \n",
     "        global get_hour, get_date\n",
-    "        if get_hour is None:\n",
+    "        \n",
+    "        \n",
+    "        # Update global variables based on stream date and hour\n",
+    "        \n",
+    "        if get_hour is None :\n",
     "            get_hour = creation_time.hour\n",
     "            get_date = creation_time.date()\n",
     "            print(get_hour, get_date)\n",
-    "            return\n",
-    "            "
+    "            return"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "415f8411",
+   "metadata": {},
+   "source": [
+    "## Initialize Class for Subscibing Callback for Retreiving Tweets Counts for Top Trends"
    ]
   },
   {
@@ -115,61 +181,134 @@
     "class MainSubscribeCallback(SubscribeCallback):\n",
     "    \n",
     "    def status(self, pubnub, status):\n",
+    "        \n",
     "         # handle according to status\n",
+    "            \n",
     "        FirstSubscribeCallback.status(self, pubnub, status)\n",
     "        \n",
     "    def presence(self, pubnub, status):\n",
+    "        \n",
     "         # handle incoming presence data\n",
+    "            \n",
     "        FirstSubscribeCallback.presence(self, pubnub, presence)\n",
     "        \n",
     "    def message(self, pubnub, message):\n",
+    "        \n",
     "        # Handle new message stored in message.message\n",
+    "        \n",
+    "        \n",
+    "        # Declare Global Variables\n",
     "        \n",
     "        global creation_time, end_time, start_times, tweet_count, set_top_trends, zip_path, cassandra_configs, trends_tweets, session\n",
     "        \n",
+    "        \n",
+    "        # Get Tweet DateTime\n",
+    "        \n",
     "        creation_time = datetime.strptime(message.message['created_at'], \"%a %b %d %H:%M:%S %z %Y\")\n",
     "                \n",
+    "    \n",
+    "        # Start Processing Start Time are initialized\n",
+    "        \n",
     "        if start_times[0] is not None:\n",
+    "            \n",
+    "            \n",
+    "            # Loop for the number of minutes to track data for\n",
+    "            \n",
     "            for i in range(len(set_minutes)):\n",
+    "                \n",
+    "                \n",
+    "                # if new minutes are added, populate start time for them\n",
+    "                \n",
     "                if start_times[i] is None:\n",
     "                    start_times[i] = creation_time\n",
+    "                    \n",
+    "                    \n",
+    "                # Start Processing if set minutes have passed \n",
+    "                \n",
     "                if creation_time == (start_times[i]  + timedelta(minutes=set_minutes[i])) :\n",
     "                    print(set_minutes[i], \" minutes have passed \", creation_time)\n",
     "\n",
+    "                    \n",
+    "                    # Get unix time of current time and generate key (unix_time _ minutes)\n",
+    "                    \n",
     "                    unix_time = int(time.mktime(start_times[i].timetuple())) \n",
     "                    key =  str(unix_time) + \"_\" + str(set_minutes[i])\n",
     "\n",
+    "                    \n",
+    "                    # Populate Payload ({Top Trend: Tweet Count})\n",
+    "                    \n",
     "                    value = dict()\n",
     "                    for trendd, tweet_numbers in tweet_count.items():\n",
     "                        value[trendd] = tweet_numbers\n",
     "                        trends_tweets[key] = value\n",
     "\n",
     "                    print(\"Here's twitter tweets\", trends_tweets)\n",
+    "                    \n",
+    "                    \n",
+    "                    # Insert the Key Value Pair in Casssandra DB table\n",
+    "                    \n",
     "                    columns = '(StreamTimeKey, TweetCountForTrends)'\n",
     "                    Cassandra_DB_Setup.insert_into_table_from_df(session, \"twitter_trends\", \"tweets_per_trend\", columns, trends_tweets)\n",
     "\n",
+    "                    \n",
+    "                    # Resrt Start time and Key Value Pair\n",
+    "                    \n",
     "                    start_times[i] = creation_time\n",
     "                    trends_tweets = dict()\n",
     "            \n",
     "        else:\n",
+    "            \n",
+    "            \n",
+    "            # Initialize Start Times for the First Time\n",
+    "            \n",
     "            for i in range(len(set_minutes)):\n",
     "                start_times[i] = creation_time\n",
+    "                \n",
+    "                \n",
+    "            # Connect to Cassandra DB    \n",
+    "            \n",
     "            session = Cassandra_DB_Setup.cassandra_connection(set_zip_path, set_cassandra_configs)\n",
     "            print(\"Process Started at: \", creation_time)\n",
     "            print(session)\n",
+    "            \n",
+    "            \n",
+    "            # Initialze Key Value Pairs\n",
+    "            \n",
     "            for trend_number, set_trend in set_top_trends.items():\n",
     "                tweet_count[set_trend] = 0\n",
     "                \n",
+    "                \n",
+    "                \n",
+    "        # Get hashtags from stream   \n",
+    "        \n",
     "        trend_list = message.message['entities']['hashtags']\n",
     "        \n",
-    "\n",
-    "        # and set_country in country\n",
+    "        \n",
+    "        # Start Processing If hastags exist\n",
+    "        \n",
     "        if trend_list:\n",
+    "            \n",
+    "            \n",
+    "            # Loop For each Hastag\n",
+    "            \n",
     "            for trend in trend_list:\n",
-    "                # print(creation_time, trend, country)\n",
+    "\n",
+    "                \n",
+    "                # Get hasgtag text and convert to lower case\n",
+    "                \n",
     "                trend_text = trend['text'].lower()\n",
+    "                \n",
+    "                \n",
+    "                # Loop for each Top Trend\n",
+    "                \n",
     "                for trend_number, set_trend in set_top_trends.items():\n",
+    "                    \n",
+    "                    # If Top Trend found in current Hashtag text \n",
     "                    if set_trend == trend_text:\n",
+    "                        \n",
+    "                        \n",
+    "                        # Increae Tweet Count for Top Trend\n",
+    "                        \n",
     "                        print(set_trend, trend_text)\n",
     "                        tweet_count[set_trend] +=1"
    ]
