--- a/src/config/Read_Configs.ipynb
+++ b/src/config/Read_Configs.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "f4f6e41a",
+   "metadata": {},
+   "source": [
+    "## Import Dependencies"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "986f94ef",
@@ -14,34 +22,93 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8e3a113c",
+   "metadata": {},
+   "source": [
+    "## Function to Read configuartion.yaml"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "d41d21a2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_yaml():\n",
+    "    \n",
+    "    try:\n",
+    "        \n",
+    "        # get configuration.yaml path\n",
+    "        \n",
+    "        path = os.getcwd()\n",
+    "        path = str(os.path.abspath(os.path.join(path, os.pardir))) + \"\\src\\data\\configuration.yaml\"\n",
+    "        print(path)\n",
+    "        \n",
+    "        \n",
+    "        # open configuration.yaml file and raed configurations\n",
+    "        \n",
+    "        with open(path, 'r') as ymlfile:\n",
+    "            cfg = yaml.safe_load(ymlfile)\n",
+    "            return cfg\n",
+    "    \n",
+    "    except Exception as e:\n",
+    "        print(str(e))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "17dca589",
+   "metadata": {},
+   "source": [
+    "## Function to Read PubNub configurations"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "dde98445",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_yaml():\n",
-    "    try:\n",
-    "        path = os.getcwd()\n",
-    "        path = str(os.path.abspath(os.path.join(path, os.pardir))) + \"\\src\\data\\configuration.yaml\"\n",
-    "        print(path)\n",
-    "        with open(path, 'r') as ymlfile:\n",
-    "            cfg = yaml.safe_load(ymlfile)\n",
-    "            return cfg\n",
-    "    \n",
-    "    except Exception as e:\n",
-    "        print(str(e))\n",
-    "    \n",
     "def read_pubnub_configurations():\n",
+    "    \n",
+    "    # read pubnub configrations from configurations.yaml\n",
+    "    \n",
     "    cfg = get_yaml()\n",
     "    pubnub_config=cfg[\"pubnub_config\"]\n",
-    "    return pubnub_config\n",
-    "        \n",
+    "    return pubnub_config      "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1ba6c430",
+   "metadata": {},
+   "source": [
+    "## Function to Read Cassandra Configurations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "c0adf35b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def read_cassandra_configurations():\n",
+    "    \n",
+    "    # read cassandra configrations from configurations.yaml\n",
+    "    \n",
     "    cfg = get_yaml()\n",
+    "    cassandra_config=cfg[\"cassandra_config\"]\n",
+    "    \n",
+    "    \n",
+    "    # get zip path for Cassandra db bundle\n",
+    "    \n",
     "    path = os.getcwd()\n",
     "    zip_path = str(os.path.abspath(os.path.join(path, os.pardir))) + \"\\src\\data\\secure-connect-twitter-trends-db.zip\"\n",
-    "    cassandra_config=cfg[\"cassandra_config\"]\n",
+    "    \n",
     "    return zip_path, cassandra_config"
    ]
   }
