--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -1,25 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "42fed690",
+   "metadata": {},
+   "source": [
+    "## Import Dependencies"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "88666724",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "importing Jupyter notebook from C:\\Users\\tarvi\\Twitter Trends Analysis\\Phase 4\\src\\common\\Extract_Twitter_Trends.ipynb\n",
-      "importing Jupyter notebook from C:\\Users\\tarvi\\Twitter Trends Analysis\\Phase 4\\src\\config\\Read_Configs.ipynb\n",
-      "importing Jupyter notebook from C:\\Users\\tarvi\\Twitter Trends Analysis\\Phase 4\\src\\common\\App.ipynb\n",
-      "importing Jupyter notebook from C:\\Users\\tarvi\\Twitter Trends Analysis\\Phase 4\\src\\common\\My_Subscribe_Callback.ipynb\n",
-      "importing Jupyter notebook from C:\\Users\\tarvi\\Twitter Trends Analysis\\Phase 4\\src\\common\\Cassandra_DB_Setup.ipynb\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#import libraries\n",
+    "\n",
     "import import_ipynb\n",
     "import requests\n",
     "import time \n",
@@ -27,6 +24,7 @@
     "import threading\n",
     "\n",
     "#import ipynb files\n",
+    "\n",
     "from common.Extract_Twitter_Trends import Twitter_Trends\n",
     "import config.Read_Configs as Read_Configs\n",
     "from common.App import PubNub_Config\n",
@@ -34,8 +32,17 @@
     "import common.Cassandra_DB_Setup as Cassandra_DB_Setup\n",
     "\n",
     "#ignore warnings\n",
+    "## Initialize Class for Subscibing Callback for Retreiving Start Time\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3d94e2e9",
+   "metadata": {},
+   "source": [
+    "## Initialize Global Variables"
    ]
   },
   {
@@ -46,10 +53,19 @@
    "outputs": [],
    "source": [
     "#initialize global variables\n",
+    "\n",
     "g_end_time = None\n",
     "g_trends = None\n",
     "g_country = None\n",
     "g_minutes = None"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9263ce6e",
+   "metadata": {},
+   "source": [
+    "## Function to Setup PubNub Consumer"
    ]
   },
   {
@@ -60,9 +76,24 @@
    "outputs": [],
    "source": [
     "def connect_to_PubNub():\n",
+    "    \n",
+    "    # Read Configs from configuration.yaml file\n",
+    "    \n",
     "    pubnub_configs = Read_Configs.read_pubnub_configurations()\n",
+    "    \n",
+    "    # Setup Configurations for PubNub Consumer\n",
+    "    \n",
     "    stream = PubNub_Config(pubnub_configs['subscribe_key'], pubnub_configs['publish_key'], pubnub_configs['user_id'] )\n",
+    "    \n",
     "    return stream"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f17f8812",
+   "metadata": {},
+   "source": [
+    "## Function to Extract Top Trends Based on API Configurations "
    ]
   },
   {
@@ -73,16 +104,42 @@
    "outputs": [],
    "source": [
     "def update_top_trends(trends, country):\n",
+    "    \n",
+    "    # Connect to PubNub and Start Streaming to get Start DateTime\n",
+    "    \n",
+    "    # Update Global variables of Hour and Date \n",
+    "    \n",
+    "    My_Subscribe_Callback.get_hour = None\n",
+    "    My_Subscribe_Callback.get_date = None \n",
+    "    \n",
     "    stream = connect_to_PubNub()\n",
     "    FirstSubscribeCallback = My_Subscribe_Callback.FirstSubscribeCallback()\n",
     "    stream.run(FirstSubscribeCallback)\n",
+    "    \n",
     "    time.sleep(10)\n",
+    "    \n",
+    "    # Update variables of Hour and Date extracted from PubNub stream\n",
+    "    \n",
     "    hour = My_Subscribe_Callback.get_hour\n",
     "    date = My_Subscribe_Callback.get_date\n",
+    "    \n",
+    "    # Extract Trends from getdaytrends API based on API configurations\n",
+    "    \n",
     "    trends = Twitter_Trends(country, date, hour, trends)\n",
     "    top_trends = trends.get_top_trends()\n",
+    "    \n",
+    "    # Update Top Trends Global variable based on Extracted Trends\n",
+    "    \n",
     "    My_Subscribe_Callback.set_top_trends = top_trends\n",
     "    print(My_Subscribe_Callback.set_top_trends)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "96350309",
+   "metadata": {},
+   "source": [
+    "## Function to Extract Tweets Count for Top Trends Based on API Configurations "
    ]
   },
   {
@@ -93,9 +150,20 @@
    "outputs": [],
    "source": [
     "def update_tweets_for_trends():\n",
+    "    \n",
+    "    # Connect to PubNub and Start Streaming to get Tweets Count for Top Trends\n",
+    "    \n",
     "    stream = connect_to_PubNub()\n",
     "    MainSubscribeCallback = My_Subscribe_Callback.MainSubscribeCallback()\n",
     "    stream.run(MainSubscribeCallback)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "04707196",
+   "metadata": {},
+   "source": [
+    "## Function to Extract Number of Trends and Location from API"
    ]
   },
   {
@@ -106,14 +174,29 @@
    "outputs": [],
    "source": [
     "def get_configs_from_trends_API():\n",
+    "    \n",
     "    # URL for retreiving Twitter Trends configurations from API \n",
+    "    \n",
     "    URL = \"https://9188-2a02-a210-2ec2-1480-58ec-cacd-5b36-a6cf.ngrok-free.app/trend_read_configurations/\"\n",
     "    \n",
+    "    # Get request to Trends API\n",
+    "    \n",
     "    r = requests.get(url = URL)\n",
+    "    \n",
+    "    # Load Configurations for Number of Trends and Location\n",
+    "    \n",
     "    trends = r.json()[0]\n",
     "    country = r.json()[1]\n",
     "    \n",
     "    return trends, country"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9a7be581",
+   "metadata": {},
+   "source": [
+    "## Function to Extract Time Interval in Minutes for Tracking Tweet Count from API"
    ]
   },
   {
@@ -124,13 +207,28 @@
    "outputs": [],
    "source": [
     "def get_configs_from_time_API():\n",
+    "    \n",
     "    # URL for retreiving Time configurations from API \n",
+    "    \n",
     "    URL = \"https://9188-2a02-a210-2ec2-1480-58ec-cacd-5b36-a6cf.ngrok-free.app/get_timer/\"\n",
     "    \n",
+    "    # Get Request to Time API\n",
+    "    \n",
     "    r = requests.get(url = URL)\n",
+    "    \n",
+    "    # Load Configurations for Minutes\n",
+    "    \n",
     "    minutes = r.json()\n",
     "    \n",
     "    return minutes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3605647a",
+   "metadata": {},
+   "source": [
+    "## Function to Get All Data from Cassandra Table"
    ]
   },
   {
@@ -141,8 +239,22 @@
    "outputs": [],
    "source": [
     "def get_trends_tweets_from_Cassandra():\n",
+    "    \n",
+    "    # Connect to Cassandra DB\n",
+    "    \n",
     "    session = Cassandra_DB_Setup.cassandra_connection(zip_path, cassandra_configs)\n",
+    "    \n",
+    "    # Select * from table\n",
+    "    \n",
     "    Cassandra_DB_Setup.select_from_table(session, \"twitter_trends\", \"tweets_per_trend\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "27c393f7",
+   "metadata": {},
+   "source": [
+    "## Function to Initiate Thread for Updating Configurations and fetching Top Trends as soon as they get updated on the API"
    ]
   },
   {
@@ -153,22 +265,55 @@
    "outputs": [],
    "source": [
     "def thread1():\n",
+    "    \n",
+    "    # Declare Global Variables\n",
+    "    \n",
     "    global g_end_time, g_trends, g_country, g_minutes\n",
+    "    \n",
+    "    # Infinite Loop\n",
+    "    \n",
     "    while True:\n",
+    "        \n",
+    "        # Retreive Number of Top Trends and Country from API\n",
+    "        \n",
     "        trends, country = get_configs_from_trends_API()\n",
+    "        \n",
     "        time.sleep(60)\n",
+    "        \n",
+    "        # Retrive Minutes from API\n",
+    "        \n",
     "        minutes = get_configs_from_time_API()\n",
+    "        \n",
+    "        #Check if any of the configurations is updated\n",
+    "        \n",
     "        if g_end_time is None or g_end_time < datetime.now() or trends!= g_trends or country != g_country or minutes !=g_minutes:\n",
+    "                \n",
+    "                # Update Global Variables\n",
+    "                \n",
     "                g_trends = trends\n",
     "                g_country = country\n",
     "                g_minutes = minutes\n",
+    "                \n",
+    "                # Update Top Trends based on new configurations\n",
+    "                \n",
     "                update_top_trends(trends, country)\n",
     "                print(minutes, My_Subscribe_Callback.set_minutes)\n",
     "                if minutes not in My_Subscribe_Callback.set_minutes:\n",
     "                    My_Subscribe_Callback.set_minutes.append(minutes)\n",
     "                    My_Subscribe_Callback.start_times.append(None)\n",
+    "                    \n",
+    "                # Modify Time Interval to Automatically Update Trends for the next hour\n",
+    "                \n",
     "                g_end_time = datetime.now() + timedelta(hours=1)\n",
     "                print(g_end_time, datetime.now())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6598eafe",
+   "metadata": {},
+   "source": [
+    "## Function to Initiate Thread to Retreive Tweet Counts based on API configurations "
    ]
   },
   {
@@ -179,10 +324,27 @@
    "outputs": [],
    "source": [
     "def thread2():\n",
+    "    \n",
+    "    # Read Cassandra DB configrations from configuration.yaml\n",
+    "    \n",
     "    zip_path, cassandra_configs = Read_Configs.read_cassandra_configurations()\n",
+    "    \n",
+    "    # Update global variables for Cassadra connection\n",
+    "    \n",
     "    My_Subscribe_Callback.set_zip_path = zip_path\n",
     "    My_Subscribe_Callback.set_cassandra_configs = cassandra_configs\n",
+    "    \n",
+    "    # Start Retreiving Tweet Counts for Top Trends\n",
+    "    \n",
     "    update_tweets_for_trends()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "46f36e38",
+   "metadata": {},
+   "source": [
+    "## MAIN function"
    ]
   },
   {
@@ -194,20 +356,39 @@
    "source": [
     "def main():\n",
     "    \n",
-    "    # Create two threads as follows\n",
+    "    # Initiate two threads for parallel update of configurations from API and data retreival from PunNub\n",
+    "    \n",
     "    try:\n",
+    "        \n",
+    "        # Thread 1 for parallel update of configurations from API\n",
+    "        \n",
     "        t1=threading.Thread(target=thread1)\n",
     "        t1.daemon = True  # set thread to daemon ('ok' won't be printed in this case)\n",
     "        t1.start()\n",
+    "        \n",
+    "        \n",
     "        time.sleep(120)\n",
+    "        \n",
+    "        \n",
+    "        # Thread 2 for data retreival from PunNub\n",
+    "        \n",
     "        t2=threading.Thread(target=thread2)\n",
     "        t2.daemon = True  # set thread to daemon ('ok' won't be printed in this case)\n",
     "        t2.start()\n",
+    "        \n",
     "    except:\n",
     "        print (\"Error: unable to start thread\")\n",
     "        \n",
     "    while True:\n",
     "        pass\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a5b43230",
+   "metadata": {},
+   "source": [
+    "## Call MAIN to Start the Process"
    ]
   },
   {
@@ -498,26 +679,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "45425edb",
+   "metadata": {},
+   "source": [
+    "## Create Table in Cassandra"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "ac1eb316",
    "metadata": {},
    "outputs": [],
    "source": [
+    "## Uncomment and set column name, data types and primary keys to create table in Cassandra DB \n",
+    "\n",
+    "## Set varibles\n",
+    "\n",
     "# columns = ['StreamTimeKey', 'TweetCountForTrends' ]\n",
     "# data_types = ['text', 'map<text, int>']\n",
     "# primary_key = ['StreamTimeKey']\n",
     "\n",
+    "## Create table\n",
+    "\n",
     "# Cassandra_DB_Setup.create_table(session, \"twitter_trends\", \"tweets_per_trend\", columns, data_types, primary_key)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bb57396b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
